Fix styling on iOS and narrow devices

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -664,17 +664,22 @@ a.symbol:hover {
 
 #mc_embed_signup_scroll {
 	display: flex;
+	flex-wrap: wrap;
+
 	#mce-EMAIL, #mc-embedded-subscribe {
 		font-size: 16px;
 		padding: 10px;
 		border: 1px solid $link-color;
 	}
 	#mce-EMAIL {
-		flex-grow: 1;
+		flex-grow: 100;
 	}
 	#mc-embedded-subscribe {
+		flex-grow: 1;
 		color: white;
 		background: $link-color;
 		cursor: pointer;
+		-webkit-appearance: none;
+		-moz-appearance: none;
 	}
 }
